test: resolve maintainability issues